Adding to cart test

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/SriluBalla/Srilu-Cypress-Ty#readme",
   "dependencies": {
     "dotenv": "^16.4.4"
+  },
+  "devDependencies": {
+    "cypress-xpath": "^2.0.1"
   }
 }
