--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "url": "https://github.com/SriluBalla/Srilu-Cypress-Ty/issues"
   },
   "homepage": "https://github.com/SriluBalla/Srilu-Cypress-Ty#readme",
-  "dependencies": {
-    "dotenv": "^16.4.4"
-  },
   "devDependencies": {
-    "cypress-xpath": "^2.0.1"
+    "cypress-dotenv": "^2.0.0",
+    "cypress-xpath": "^2.0.1",
+    "dotenv": "^16.4.4"
   }
 }
